Fix spacing issues, add video block, commentary blocks and background animation

--- a/kus-uslugi/src/styles/cat_info.css
+++ b/kus-uslugi/src/styles/cat_info.css
@@ -65,7 +65,6 @@
 }
 
 .cat-info-name {
-
     font-size: 2em;
     margin: 0;
 }
@@ -97,8 +96,9 @@
 
 .cat-info-desc {
     grid-area: desc;
-    margin: 10px 20px 10px 0;
+    margin: 10px 30px 10px 0;
     overflow: auto;
+    font-size: 1.5em;
 }
 
 @media (max-width: 450px) {
@@ -115,6 +115,13 @@
     .cat-info-img-container {
         height: 60%;
         width: 70%;
+        margin-top: 10px;
+        align-self: center;
+    }
+
+    .cat-info-desc {
+        margin: 10px 0;
+        text-align: center;
     }
 
 }
