--- a/kus-uslugi/src/styles/commentary.css
+++ b/kus-uslugi/src/styles/commentary.css
@@ -36,6 +36,8 @@
     grid-area: name;
     justify-self: center;
     align-self: center;
+
+    color: #0065b1;
 }
 
 .commentary-comm {
