--- a/kus-uslugi/src/styles/form_button.css
+++ b/kus-uslugi/src/styles/form_button.css
@@ -4,4 +4,6 @@
     border-radius: 20px;
     font-size: 1em;
     border: #0065b1 solid 3px;
+
+    z-index: 400;
 }
